<resources>
    <string name="app_name">Eco-Route Apps</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="first_fragment">first fragment</string>
    <string name="second_fragment">second fragment</string>
    <string name="first_title">Welcome To Ecoroute</string>
    <string name="first_desc">Jalani Hidup dengan Jejak Hijau Temukan \n Rute Ramah Lingkunganmu</string>
    <string name="third_fragment">third fragment</string>
    <string name="third_title">Bergerak Lebih Baik</string>
    <string name="third_desc">Berjalan, Bersepeda , dan Jadikan Polusi \n Karbon Sejarah!</string>
    <string name="second_title">Perbaiki Lingkunganmu</string>
    <string name="second_desc">Beralih ke Rute Ramah Lingkungan , Kurangi \n Polusi Karbon Bersama Kami</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="sing_in">Sing In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="auth_desc">Mulai Langkah kecil Untuk Alam yang \n lebih baik</string>
    <string name="create_an_account">Create An Account</string>
    <string name="auth_title">Bergabung Bersama Kami</string>
    <string name="back">back</string>
</resources>